--- a/htmlform.html
+++ b/htmlform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form example</title>
+    <title>form fellow</title>
 </head>
 <body>
     <h1 style="text-align:center;">This is the Form table</h1>
